added text and classes

--- a/index.html
+++ b/index.html
@@ -12,19 +12,10 @@
         <div class="box">
             <h1 class="title">Title</h1>
             <p class="main-lorem">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum ab
-              fuga error iure facere in, aspernatur velit sunt nesciunt? Facilis
-              quos magni perferendis recusandae. Accusamus maiores ipsa dolorem
-              harum. Reiciendis!Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Ipsum ab fuga error iure facere in, aspernatur velit sunt
-              nesciunt? Facilis quos magni perferendis recusandae. Accusamus maiores
-              ipsa dolorem harum. Reiciendis!
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam possimus odit eos qui minima aliquid dicta hic, aliquam itaque nostrum eum quisquam ex quasi corrupti, ipsum harum aperiam. Sit, voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga doloremque, cupiditate ipsam vel reiciendis consequuntur, officiis, ab aperiam delectus sequi aut voluptatum iusto id explicabo. Ratione quas repellat facilis alias!
             </p>
             <p class="big-lorem">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nam
-              quisquam eligendi? Dolor molestias animi error fugit officiis ipsam
-              laudantium perspiciatis debitis adipisci dolores. Quisquam fugiat
-              omnis rem sed quidem?
+             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus ab delectus tempora officiis sunt obcaecati qui velit adipisci beatae voluptatum repudiandae libero, facere temporibus maiores cupiditate quaerat dicta, recusandae doloremque!
             </p>
         </div>
       </div>
